--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ python:
 install: "pip install -r config/requirements.txt --use-mirrors"
 # # command to run tests
 env:
-  - DJANGO_VERSION=1.5.2 DJANGO_SETTINGS_MODULE="settings"
+  - DJANGO_SETTINGS_MODULE="settings"
 script: nosetests
