--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 # command to install dependencies
 install: "pip install -r config/requirements.txt --use-mirrors"
 # # command to run tests
-env:
-  - DJANGO_SETTINGS_MODULE="settings"
-script: "make it-rain"
+# env:
+  # - DJANGO_SETTINGS_MODULE="settings"
+# env: DB=sqlite3
+python setup.py test
