--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "2.7"
 # command to install dependencies
-install: "pip install -r config/requirements.txt --use-mirrors"
+install: "pip install -r djangoreport/requirements.txt --use-mirrors"
 # # command to run tests
 # env:
   # - DJANGO_SETTINGS_MODULE="settings"
