--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ install: "pip install -r requirements.txt --use-mirrors"
 # env:
   # - DJANGO_SETTINGS_MODULE="settings"
 # env: DB=sqlite3
-script: python setup.py test
+# script: python setup.py test
+scrip: python manage.py test
