--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: python
+
 python:
   - "2.7"
+
+env:
+  - DJANGO=Django==1.5.2
+
 # command to install dependencies
 install: "pip install -r requirements.txt --use-mirrors"
+
 # # command to run tests
-# env:
-  # - DJANGO_SETTINGS_MODULE="settings"
-# env: DB=sqlite3
 script: python setup.py test
