--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: python
-
 python:
-  - "2.7"
-
+  - 2.7
 env:
   - DJANGO=Django==1.5.2
-
-# command to install dependencies
-install: "pip install -r requirements.txt --use-mirrors"
-
-# # command to run tests
-script: python setup.py test
+install: 
+	- pip install -r requirements.txt --use-mirrors
+	- pip install coveralls --use-mirrors
+script:
+	- coverage run --source=report setup.py test
+after_success:
+  - coveralls
