--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 Django==1.5.2
+PyYAML==3.10
 South==0.8.2
 coverage==3.6
+coveralls==0.2
 django-setuptest==0.1.4
+docopt==0.6.1
 pep8==1.4.6
+requests==1.2.3
+sh==1.09
 six==1.3.0
 wsgiref==0.1.2
