--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ install:
  - pip install -r requirements.txt --use-mirrors
  - pip install coveralls --use-mirrors
 script:
- - coverage run --source=report setup.py test --settings=test_settings --verbosity=2
+ - coverage run --source=report setup.py test
 after_success:
  - coveralls
