--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
  - pip install -r requirements.txt --use-mirrors
  - pip install coveralls --use-mirrors
 script:
- - coverage run --source=report setup.py test
+ # - coverage run --source=report setup.py test
+ - coverage run --source=report manage.py test
 after_success:
  - coveralls
