--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ install:
 script:
  - coverage run --omit=*/migrations/* --source=report setup.py test
 after_success:
- - coveralls
+ - coveralls -c coverage.rc
