--- a/coverage.rc
+++ b/coverage.rc
@@ -9,3 +9,4 @@ exclude_lines =
     raise AssertionError
     raise NotImplementedError
     if __name__ == .__main__.:
+    # -*- coding: utf-8 -*-
