--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
  - pip install coveralls --use-mirrors
 script:
  # - coverage run --omit=*/migrations/* --source=report setup.py test
- - coverage run --source=report setup.py test
+ # - coverage run --source=report setup.py test
+ - coverage run --source=report manage.py test --verbosity=2
 after_success:
  - coveralls
